# auto-reject

./: AutoReject.cpp  CMakeLists.txt  LICENSE  README.md  auto.py
test/: main.cpp  test.cpp  test.h
